# Matmul-Optimization

./: .gitignore  CMakeLists.txt  README.md
include/: benchmark.h  matmul_naive.h  matmul_naive_gpu.h  matmul_tiled_cpu.h  matmul_tiled_gpu.h  matmul_tiled_reg_gpu.h  matmul_tiled_threaded.h  matrix.h
src/: benchmark.cpp  main.cpp  matmul_naive.cpp  matmul_naive_gpu.cu  matmul_tiled_cpu.cpp  matmul_tiled_gpu.cu  matmul_tiled_reg_gpu.cu  matmul_tiled_threaded.cpp  matrix.cpp
tests/: test_naive.cpp  test_naive_gpu.cpp  test_tiled_cpu.cpp  test_tiled_gpu.cpp  test_tiled_reg_gpu.cpp  test_tiled_threaded.cpp  test_utils.h
